/*
 * To change this license header, choose License Headers in Project Properties.
 * To change this template file, choose Tools | Templates
 * and open the template in the editor.
 */
package pt.ipp.isep.dei.esoft.pot.model;

/**
 *
 * @author pokem
 */
public class TipoRegimento {
    private String designacao;
    private String descRegras;
    
    public TipoRegimento(String designacao, String descRegras){
        this.descRegras = descRegras;
        this.designacao = designacao;
    }
}
